<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="jp.bellware.echo.setting.AboutActivity">
    <android.support.v7.widget.Toolbar android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar"
        />
    <ImageView
        android:layout_marginTop="@dimen/activity_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="center"
        android:src="@drawable/about"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/activity_margin"
        android:layout_marginLeft="@dimen/activity_margin"
        android:layout_marginRight="@dimen/activity_margin"
        android:gravity="center_horizontal"
        android:text="@string/app_name_long"
        android:textColor="@color/text_dark"
        android:textSize="24sp"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_marginTop="@dimen/activity_margin"
        android:layout_marginLeft="@dimen/activity_margin"
        android:layout_marginRight="@dimen/activity_margin"
        android:id="@+id/version"
        android:layout_width="match_parent"
        android:textSize="@dimen/body"
        android:textColor="@color/text"
        android:text="@string/version_sample"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_marginLeft="@dimen/activity_margin"
        android:layout_marginRight="@dimen/activity_margin"
        android:layout_width="match_parent"
        android:textSize="@dimen/body"
        android:textColor="@color/text"
        android:text="@string/copyright"
        android:layout_height="wrap_content" />


</LinearLayout>
